# agent-oculus

./: .env.example  .gitignore  AGENT_IDENTITY.md  README.md  ai_setup.md  config.yaml  hermes-skill-oculus.md  main.py  pyproject.toml  requirements.txt
.hermes/plugins/oculus/: __init__.py  plugin.yaml
core/: exceptions.py  schemas.py
core/analytics/: __init__.py  iv_rank.py  strategy_selector.py
core/output/: athena_adapter.py  formatter.py
core/public_api/: account.py  client.py  market_data.py  options.py  orders.py
core/synthesis/: alert_engine.py  context_builder.py  regime_detector.py
core/worldmonitor/: btc_etf_flows.py  client.py  macro.py  market_radar.py  stablecoins.py  supply_chain.py  trade_policy.py
hermes/agent-packs/: oculus.yaml
hermes/plugin/oculus/: schemas.py  tools.py
hermes/skins/: oculus.yaml
scripts/: install_agent_pack.sh  install_oculus_plugin.sh  install_oculus_skill.sh  install_oculus_skin.sh
tests/: conftest.py  test_iv_rank.py  test_public_api.py  test_synthesis.py  test_worldmonitor.py
tools/: get_macro_context.py  get_options_chain.py  get_portfolio_snapshot.py  get_signals.py  place_order.py
